--- a/config.json
+++ b/config.json
@@ -7,8 +7,8 @@
   "instagram": "https://discord.gg/GJm6Pka29M",
   "telegram": "https://vk.com/cr1stal_rp",
   "supportPeople": "https://discord.gg/GJm6Pka29M",
-  "filesFull": "1",
-  "texdb_1": "1", 
+  "filesFull": "https://www.dropbox.com/s/q6davtzybfzawwy/fill.zip?dl=1",
+  "texdb_1": "https://www.dropbox.com/s/q6davtzybfzawwy/fill.zip?dl=1", 
   "baseClient": "https://www.dropbox.com/s/4ok0znz7i3zf957/cr1stalcl.apk?dl=1",
   "launcher": "https://whiteskidrow-samp-cdn.itcloud.io/cdn2/launch_money.apk",
   "version": "1.1",
