--- a/config.json
+++ b/config.json
@@ -7,9 +7,9 @@
   "instagram": "https://discord.gg/GJm6Pka29M",
   "telegram": "https://vk.com/cr1stal_rp",
   "supportPeople": "https://discord.gg/GJm6Pka29M",
-  "filesFull": "https://www.dropbox.com/s/q6davtzybfzawwy/fill.zip?dl=1",
-  "texdb_1": "https://www.dropbox.com/s/q6davtzybfzawwy/fill.zip?dl=1", 
-  "baseClient": "https://www.dropbox.com/s/4ok0znz7i3zf957/cr1stalcl.apk?dl=1",
+  "filesFull": "https://www.dropbox.com/s/onf7y48v4nj2gug/R.zip?dl=1",
+  "texdb_1": "https://www.dropbox.com/s/onf7y48v4nj2gug/R.zip?dl=1", 
+  "baseClient": "https://www.dropbox.com/s/3lm7r0lzk8f2nle/client.apk?dl=1",
   "launcher": "https://whiteskidrow-samp-cdn.itcloud.io/cdn2/launch_money.apk",
   "version": "1.1",
   "gVersion": "1",
